--- a/css/styles.scss
+++ b/css/styles.scss
@@ -36,7 +36,11 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	}
 }
 
-
+.planet {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
 
 
