--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,7 @@
+@import url("https://use.typekit.net/tvt8pmf.css");
+@import url("https://use.typekit.net/tvt8pmf.css");
+
+
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "../node_modules/bootstrap/scss/functions";
 
@@ -36,6 +40,15 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	}
 }
 
+.text1{
+font-family: "darkmode-on", sans-serif;
+font-weight: 100;
+font-style: normal;
 
-
+}
+.titel1 {
+	font-family: "proxima-soft", sans-serif;
+	font-weight: 200;
+	font-style: normal;
+}
 
