--- a/css/styles.scss
+++ b/css/styles.scss
@@ -36,6 +36,10 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	}
 }
 
-
+.overskrift{
+	font-family: "proxima-soft", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
 
