--- a/css/styles.scss
+++ b/css/styles.scss
@@ -41,3 +41,8 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
     font-weight: 400;
     font-style: normal;
  }
+
+.baggrund{
+	background-image: url("../image/baggrund.png");
+	background-repeat: repeat;
+}
