--- a/css/styles.scss
+++ b/css/styles.scss
@@ -46,3 +46,10 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	background-image: url("../image/baggrund.png");
 	background-repeat: repeat;
 }
+
+.tekst {
+	font-family: "darkmode-on", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+}
+
