--- a/css/styles.scss
+++ b/css/styles.scss
@@ -42,6 +42,12 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
     font-style: normal;
  }
 
+.btn {
+	font-family: "proxima-soft", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+}
+
 .baggrund{
 	background-image: url("../image/baggrund.png");
 	background-repeat: repeat;
@@ -53,9 +59,7 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	font-style: normal;
 }
 
-.btnhjælp {
 
-}
 
 // Variabler
 $small-screen: 700px;
