--- a/css/styles.scss
+++ b/css/styles.scss
@@ -84,7 +84,7 @@ $small-screen: 700px;
 
 // Styling for knapper i navbar
 .navbar {
-	.btn-outline-grå {
+	.btn-outline-graa {
 		margin: 0;
 		padding: 0;
 	}
@@ -113,4 +113,5 @@ img{
 	text-decoration-line: underline;
 
 }
+
 
