--- a/css/styles.scss
+++ b/css/styles.scss
@@ -59,6 +59,35 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	font-style: normal;
 }
 
+.button-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+
+}
+
+.btn {
+	padding: 1rem 6rem;
+	font-size: 1.5rem;
+	text-align: center;
+	text-decoration: none;
+	border-radius: 8px;
+}
+
+@media (max-width: 768px) {
+	.btn {
+		padding: 0.8rem 1.5rem;
+		font-size: 1.2rem;
+	}
+}
+
+@media (max-width: 480px) {
+	.btn {
+		padding: 0.6rem 1rem;
+		font-size: 1rem;
+	}
+}
 
 
 // Variabler
