--- a/css/styles.scss
+++ b/css/styles.scss
@@ -67,7 +67,7 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 
 }
 
-.btn {
+.btn1 {
 	padding: 1rem 6rem;
 	font-size: 1.5rem;
 	text-align: center;
@@ -76,14 +76,14 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 }
 
 @media (max-width: 768px) {
-	.btn {
+	.btn1 {
 		padding: 0.8rem 1.5rem;
 		font-size: 1.2rem;
 	}
 }
 
 @media (max-width: 480px) {
-	.btn {
+	.btn1 {
 		padding: 0.6rem 1rem;
 		font-size: 1rem;
 	}
